# TingFengbz-Android

./: README.md  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/tfgy999/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  directbuf.cpp  neon_optimizer.cpp
app/src/main/java/com/example/tfgy999/: AppDatabase.kt  AutoFrameBoostService.kt  AutoRecoilService.kt  BitmapExtensions.kt  BitmapUtils.kt  DeviceUtils.kt  DirectBufferPool.kt  FileUtil.kt  FloatingWindowService.kt  FrameData.kt  FrameDataDao.kt  FrameInterpolator.kt  FrameOverlayView.kt  FrameRecord.kt  FrameRecordDao.kt  HistoryActivity.kt  LockFreeRingBuffer.kt  LogUploadWorker.kt  LruCache.kt  MainActivity.kt  MotionEstimator.kt  MyApplication.kt  PerformanceMonitor.kt  RecoilPredictor.kt  RenderGuard.kt  RequiresApiTake.kt  TestActivity.kt  TextureLoader.kt  TileRenderer.kt  TouchAccessibilityService.java
app/src/main/java/com/example/tfgy999/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/jniLibs/: CMakeLists.txt
app/src/main/res/layout/: activity_history.xml  dialog_interpolation_methods.xml  floating_window_layout.xml  overlay_layout.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/src/test/java/com/example/tfgy999/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
